# hipCv

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: no-hip.yml
benchmarks/: preprocess_benchmark.cpp
cmake/: FindHIPSDK.cmake
docs/: api-design.md  market-positioning.md  opencv-cuda-migration.md  roadmap.md  supported-operations.md  validation-log.md  windows-development.md
examples/: blur.cpp  cvt_color.cpp  gaussian_blur.cpp  preprocess_pipeline.cpp  resize.cpp  threshold.cpp  windows_smoke.cpp
include/hipcv/: device.hpp  gpu_mat.hpp  hipcv.hpp  imgproc.hpp  status.hpp  version.hpp
python/: requirements-dev.txt
scripts/: check-windows-env.ps1
src/: device.cpp  gpu_mat.cpp  imgproc.cpp  version.cpp
tests/: test_blur.cpp  test_cvt_color.cpp  test_gaussian_blur.cpp  test_gpu_mat_no_hip.cpp  test_gpu_mat_roundtrip.cpp  test_imgproc_invalid_args.cpp  test_resize.cpp  test_status.cpp  test_threshold.cpp
